set flex prop on main

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,16 @@
 }
 
 main {
+    /* height: 100vh;  just testing */
     display: flex;
+    align-items: stretch;
 }
+
+/* just testing
+main>* {
+    background-color: palevioletred;
+    border: blue 1px solid;
+} */
 
 .cards {
     display: flex;
