--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
 
 .header-nav-list {
     display: flex;
+    justify-content: center;
+    align-items: flex-start;
+
 }
 
 main {
@@ -18,5 +21,5 @@ main {
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
-    width: 90rem;
+    width: 50rem;
 }
