--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,13 @@
 
 body {
     background-color: #1a1a1a;
+    margin: 0 auto;
+    width: 900px;
 }
 
 .header-nav-list {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
 }
 
 main {
@@ -29,34 +30,43 @@ main {
     padding: 15px;
 }
 
+h1 {
+    background-color: #000;
+    color: white;
+    padding-left: 15px;
+}
+
 header {
     background-color: #4b4b4b;
     color: white;
 }
 
-h1 {
-    background-color: #000;
-    color: white;
+.header-nav-list>li {
+    padding: 10px;
 }
 
-ul, li {
+ul>li {
     list-style: none;
-}
-
-.card {
-    padding: 1px;
-    margin: 2px;
 }
 
 aside {
     background-color: white;
     color: #4b4b4b;
+    padding: 15px;
+    margin-left: 15px;
+    margin-bottom: 10px;
 }
 
-div {
+aside li {
+    padding-bottom: 10px; 
+}
+
+.card {
     background-color: #1a1a1a;
     color: white;
     text-align: center;
-    padding: 2px;
+    margin: 4px 6px 4px 4px;
+    padding: 3px;
 }
+
 
